--- a/index.html
+++ b/index.html
@@ -10,32 +10,8 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1>Cartoons Data</h1>
+            <h1>Cartoons</h1>
             <div id="app">
-                <div class="cartoon-card">
-                    <img src="https://m.media-amazon.com/images/M/MV5BMTg1NzQ3NTI0MF5BMl5BanBnXkFtZTcwMzcwOTUyMQ@@._V1_.jpg">
-                    <h2>Reboot</h2>
-                    <p>Year: 1994<br>
-                        Creators: Gavin Blair, John Grace, Philip Mitchell<br>
-                        Rating: TV-Y7<br>
-                        Genre: Adventure, Action<br>
-                        Runtime_in_minutes: 30 <br>
-                        Episodes: 47<br>
-                        Id: 1</p>
-                </div>
-
-                <div class="cartoon-card">
-                    <img src="https://m.media-amazon.com/images/M/MV5BNDUxODg4MzE5NV5BMl5BanBnXkFtZTYwNDA0OTc4._V1_.jpg"" alt="Cartoon 2">
-                    <h2>Beast Wars</h2>
-                    <p>Year: 1996<br>
-                        Creators: Steve Sacks, Colin Davies, John Pozer<br>
-                        Rating: TV-Y7<br>
-                        Genre: Sci-Fi, Action<br>
-                        Runtime_in_minutes: 30 <br>
-                        Episodes: 52<br>
-                        Id: 2</p>
-                </div>
-                <!-- Add more cartoon cards as needed -->
             </div>
         </div>
     </div>
